# keyboard-swiping

./: .gitignore  .travis.yml  BUILD.bazel  README.md  WORKSPACE  gmock.BUILD
ci/: env.sh  install.sh
src/: keyboard.py  swipe.cpp  swipe_prediction.cpp  swipe_prediction.h  trie.cpp  trie.h  utils.cpp  utils.h
src/test/: BUILD.bazel  swipe_prediction_test.cpp  trie_test.cpp
