
cc_library(
  name = "trie",
  hdrs = ["src/trie.h"],
  srcs = ["src/trie.cpp"],
  visibility = ["//src/test:__pkg__"],
)

cc_library(
  name = "utils",
  hdrs = ["src/utils.h"],
  srcs = ["src/utils.cpp"],
  deps = [
    ":trie",
  ],
)

cc_library(
  name = "swipe-prediction",
  hdrs = ["src/swipe_prediction.h"],
  srcs = ["src/swipe_prediction.cpp"],
  deps = [
    ":trie",
    ":utils",
  ],
  visibility = ["//src/test:__pkg__"],
)
